Money Manager 21.4.3
* Migrated to Liquibase for database management